force-app/main/default/objects/SBQQ__LookupData__c/fields/Campagne__c.field-meta.xml
<CustomField>
    <fullName>Campagne__c</fullName>
    <label>Campagna</label>
    <length>50</length>
    <type>Text</type>
</CustomField>