force-app/main/default/objects/SBQQ__LookupData__c/fields/CategoryTypeClient__c.field-meta.xml
<CustomField>
    <fullName>CategoryTypeClient__c</fullName>
    <label>Tipologia cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CustomerType</valueSetName>
    </valueSet>
</CustomField>