force-app/main/default/objects/SBQQ__LookupData__c/fields/CommercialID__c.field-meta.xml
<CustomField>
    <fullName>CommercialID__c</fullName>
    <label>ID Commerciale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>