force-app/main/default/objects/SBQQ__LookupData__c/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <label>Company Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>