force-app/main/default/objects/SBQQ__LookupData__c/fields/ConsumptionRangeGAS__c.field-meta.xml
<CustomField>
    <fullName>ConsumptionRangeGAS__c</fullName>
    <label>Fascia consumo Gas</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>