force-app/main/default/objects/SBQQ__LookupData__c/fields/MeterType__c.field-meta.xml
<CustomField>
    <fullName>MeterType__c</fullName>
    <label>Tipo Apparecchiatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_MeterType</valueSetName>
    </valueSet>
</CustomField>