force-app/main/default/objects/SBQQ__LookupData__c/fields/NumberValueLookup__c.field-meta.xml
<CustomField>
    <fullName>NumberValueLookup__c</fullName>
    <label>Valore Numerico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>